fix: added in swagger new methods
