# internal/app/controllers/auth-controller/auth-controller.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"github.com/RajabovIlyas/golang-crud/internal/app/models"
 	"github.com/RajabovIlyas/golang-crud/internal/app/services/auth-service"
+	"github.com/RajabovIlyas/golang-crud/internal/app/utils"
 	"github.com/RajabovIlyas/golang-crud/internal/database"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -17,6 +18,17 @@ func NewAuthController(db *database.Queries) *AuthController {
 	return &AuthController{authService.NewAuthService(db)}
 }
 
+// Login
+//
+//	@Summary		Login user
+//	@Description	Login user
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		models.CreateUser	true	"Login user"
+//	@Success		200		{object}	models.ResponseToken
+//	@Failure		500		{object}	models.ErrorModel
+//	@Router			/auth/login [post]
 func (ac *AuthController) Login(c *gin.Context) {
 	var newUser models.UserLogin
 	if err := c.BindJSON(&newUser); err != nil {
@@ -33,6 +45,17 @@ func (ac *AuthController) Login(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"tokens": token})
 }
 
+// Registration
+//
+//	@Summary		Registration user
+//	@Description	Registration user
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		models.CreateUser	true	"Add user"
+//	@Success		200		{object}	models.ResponseToken
+//	@Failure		500		{object}	models.ErrorModel
+//	@Router			/auth/registration [post]
 func (ac *AuthController) Registration(c *gin.Context) {
 	var newUser models.CreateUser
 	if err := c.BindJSON(&newUser); err != nil {
@@ -49,6 +72,19 @@ func (ac *AuthController) Registration(c *gin.Context) {
 
 	c.JSON(http.StatusOK, gin.H{"token": token})
 }
+
+// LogoutMe .
+//
+// @Security ApiKeyAuth
+//
+//	@Summary		Logout user
+//	@Description	Logout user
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Success		200		{object}	models.Message
+//	@Failure		500		{object}	models.ErrorModel
+//	@Router			/auth/logout [post]
 func (ac *AuthController) LogoutMe(c *gin.Context) {
 	accessTokenKey, _ := c.Get("accessTokenKey")
 	err := ac.as.Logout(c.Request, fmt.Sprintf("%v", accessTokenKey))
@@ -60,11 +96,21 @@ func (ac *AuthController) LogoutMe(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "logged out"})
 }
 
+// AuthMe auth : Auth me
+//
+// @Security ApiKeyAuth
+//
+//	@Summary		Auth me
+//	@Description	Auth me
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Success		200		{object}	models.ResponseUser
+//	@Failure		500		{object}	models.ErrorModel
+//	@Router			/auth/auth-me [get]
 func (ac *AuthController) AuthMe(c *gin.Context) {
 
 	userID, _ := c.Get("userID")
-
-	fmt.Println("userID", userID)
 
 	user, err := ac.as.AuthMe(c.Request, fmt.Sprintf("%v", userID))
 
@@ -73,9 +119,20 @@ func (ac *AuthController) AuthMe(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{"user": user})
+	c.JSON(http.StatusOK, gin.H{"user": utils.DatabaseResponseUserToResponseUser(models.ResponseUser(user))})
 }
 
+// RefreshToken Refresh : Refresh token.
+//
+//	@Summary		Refresh Token
+//	@Description	Refresh Token
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		models.RefreshTokenModel	true	"Refresh token"
+//	@Success		200		{object}	models.ResponseToken
+//	@Failure		500		{object}	models.ErrorModel
+//	@Router			/auth/refresh-token [post]
 func (ac *AuthController) RefreshToken(c *gin.Context) {
 	var refreshToken models.RefreshTokenModel
 	if err := c.BindJSON(&refreshToken); err != nil {
